[package]
name = "hashpw"
version = "0.1.0"
authors = ["Oliver Koch"]
description = "hashpw is a simple CLI Tool to hash the entered passwords with scrypt"
readme = "README.md"
license-file = "LICENSE"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrypt = "0.8.0"
rpassword = "0.0.4"
